[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/objects/ray_car/RayCar.gd" type="Script" id=1]
[ext_resource path="res://media/images/icon.png" type="Texture" id=3]
[ext_resource path="res://media/models/car_parts/SMCE-wheel.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/utilities/ray_wheel/RayWheel.gd" type="Script" id=5]
[ext_resource path="res://media/models/car_parts/SMCE-hull.glb" type="PackedScene" id=6]
[ext_resource path="res://src/attachments/BrushedMotor.gd" type="Script" id=7]
[ext_resource path="res://src/attachments/Gyroscope.gd" type="Script" id=8]
[ext_resource path="res://src/attachments/Odometer.gd" type="Script" id=9]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 0.126468, 1.27087 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.628528, 0.232967, 0.868031 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1.92613, 0.140498, 0.426843 )

[node name="RayCar" type="RigidBody"]
can_sleep = false
angular_damp = 0.0
script = ExtResource( 1 )
cosmetic_wheels = [ NodePath("LeftBack/wheel"), NodePath("LeftFront/wheel"), NodePath("RightBack/wheel"), NodePath("RightFront/wheel") ]
right_wheels = [ NodePath("RightBack"), NodePath("RightFront") ]
left_wheels = [ NodePath("LeftBack"), NodePath("LeftFront") ]
left_motor = NodePath("BuiltinAttachments/Left BrushedMotor")
right_motor = NodePath("BuiltinAttachments/Right BrushedMotor")

[node name="Hull" parent="." instance=ExtResource( 6 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0, 0 )

[node name="HullCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.14338, 0 )
shape = SubResource( 1 )

[node name="HullTopCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.504267, 0 )
shape = SubResource( 2 )

[node name="FrontBumperCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.130106, -1.70033 )
shape = SubResource( 3 )

[node name="BackBumperCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.13, 1.7 )
shape = SubResource( 3 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( -0.08, 0, -3.72727e-06, 0, 0.08, 0, 2.98182e-07, 0, -1, 0, 0.037512, -2.19019 )
texture = ExtResource( 3 )

[node name="LeftBack" type="RayCast" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -0.934, 0, 0.675 )
enabled = true
cast_to = Vector3( 0, -1.2, 0 )
script = ExtResource( 5 )
force_offset = Vector3( 0, -0.1, 0 )

[node name="wheel" type="Spatial" parent="LeftBack"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, -0.700143, 0 )

[node name="wheel" parent="LeftBack/wheel" instance=ExtResource( 4 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 0.502, 0 )

[node name="LeftFront" type="RayCast" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -0.934, 0, -0.668874 )
enabled = true
cast_to = Vector3( 0, -1.2, 0 )
script = ExtResource( 5 )
force_offset = Vector3( 0, -0.1, 0 )

[node name="wheel" type="Spatial" parent="LeftFront"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, -0.7, 0 )

[node name="wheel" parent="LeftFront/wheel" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0.501972, 0 )

[node name="RightBack" type="RayCast" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0.934, 0, 0.675 )
enabled = true
cast_to = Vector3( 0, -1.2, 0 )
script = ExtResource( 5 )
force_offset = Vector3( 0, -0.1, 0 )

[node name="wheel" type="Spatial" parent="RightBack"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, -0.700143, 0 )

[node name="wheel" parent="RightBack/wheel" instance=ExtResource( 4 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0.501972, 0 )

[node name="RightFront" type="RayCast" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0.934, 0, -0.669 )
enabled = true
cast_to = Vector3( 0, -1.2, 0 )
script = ExtResource( 5 )
force_offset = Vector3( 0, -0.1, 0 )

[node name="wheel" type="Spatial" parent="RightFront"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, -0.7, 0 )

[node name="wheel" parent="RightFront/wheel" instance=ExtResource( 4 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0.502, 0 )

[node name="AttachmentSlots" type="Spatial" parent="."]

[node name="Front" type="Position3D" parent="AttachmentSlots"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, -1.8 )

[node name="Front2" type="Position3D" parent="AttachmentSlots"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.735401, -2.30562 )

[node name="FrontTop" type="Position3D" parent="AttachmentSlots"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.776154, -1.14053 )

[node name="Left" type="Position3D" parent="AttachmentSlots"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.974, 0.4, 0 )

[node name="Right" type="Position3D" parent="AttachmentSlots"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.974, 0.4, 0 )

[node name="Back" type="Position3D" parent="AttachmentSlots"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.4, 1.8 )

[node name="Logo" type="Position3D" parent="AttachmentSlots"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00163135, 0.0371331, -2.20274 )

[node name="BuiltinAttachments" type="Spatial" parent="."]

[node name="Left BrushedMotor" type="Node" parent="BuiltinAttachments"]
script = ExtResource( 7 )
forward_pin = 12
backward_pin = 14
enable_pin = 13

[node name="Right BrushedMotor" type="Node" parent="BuiltinAttachments"]
script = ExtResource( 7 )
forward_pin = 25
backward_pin = 26
enable_pin = 27

[node name="Gyroscope" type="Node" parent="BuiltinAttachments"]
script = ExtResource( 8 )
node = NodePath("../..")

[node name="Left Odometer" type="Spatial" parent="BuiltinAttachments"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.934, -0.211, 0 )
script = ExtResource( 9 )
_forward_reference = NodePath("../..")
distance_pin = 35
direction_pin = 34

[node name="Right Odometer" type="Spatial" parent="BuiltinAttachments"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.934, -0.211, 0 )
script = ExtResource( 9 )
_forward_reference = NodePath("../..")
distance_pin = 36
direction_pin = 39
